--- a/index.html
+++ b/index.html
@@ -93,10 +93,11 @@
             <h3>California State University, Northridge</h3>
             <span class="education-date">January 2018 - May 2019</span>
             <h4>Master of Science in Computer Engineering</h4>
-		<span class="education-date">3.95/4.00-</span>
+		<!--<span class="education-date">3.95/4.00-</span>-->
             <ul>
-                <li> Distinction Award.</li>
-	    	<li> Outstanding Graduate Award.</li>
+	        <li> CGPA: 3.95/4.0</li>
+                <li> Distinction Award</li>
+	    	<li> Outstanding Graduate Award</li>
             </ul>
         </div>
 
@@ -104,10 +105,11 @@
             <h3>California State University, Northridge</h3>
             <span class="education-date">August 2015 - December 2017</span>
             <h4>Bachelor of Science in Computer Engineering</h4>
-		<span> <i class="education-date">3.94/4.00</i></span>
+		<!--<span> <i class="education-date">3.94/4.00</i></span>-->
             <ul>
-		<li> Summa Cum Laude.</li>
-		    <li> Dean's List.</li>
+	        <li> CGPA: 3.94/4.0</li>
+		<li> Summa Cum Laude</li>
+		<li> Dean's List</li>
             </ul>
         </div>
 	    
@@ -115,10 +117,11 @@
             <h3>North Seattle College</h3>
             <span class="education-date">January 2014 - June 2016</span>
             <h4>Associate's Degree - Computer Engineering</h4>
-		<span> <i class="education-date">3.97/4.00</i></span>
+		<!--<span> <i class="education-date">3.97/4.00</i></span>-->
             <ul>
-		<li> Achievement & Merit Scholarships.</li>
-	        <li> Dean's List.</li>
+	        <li> CGPA: 3.97/4.0</li>
+		<li> Achievement & Merit Scholarships</li>
+	        <li> Dean's List</li>
             </ul>
         </div>
         <!-- End .education-block -->
