--- a/index.html
+++ b/index.html
@@ -131,7 +131,7 @@
 	
     <!-- SKILLS SECTION ############################################################################################################# -->	
     <div id="skills-0">
-        <h2 class="heading">Skills</h2>
+        <h2 class="heading">Skills & Certification</h2>
 	<div class="group">    
 	<section>	<!-- Left Section-->
 		<div class="resume-skill-item"> 
@@ -229,7 +229,11 @@
 	    <li>Adobe Lightroom</li>
         </ul>
     </div>
-	</div>
+    <div class="resume-skill-item">
+	<ul>
+		<li> CRLA International Mentor Training Program Certification (IMPTC) – Certified Mentor Level I</li>
+		<li> Tau Beta Pi Engineering Honor Society</li>
+    </div>
     <!-- End #skills -->
 
     <!-- ENGINEERING EXPERIENCE SECTION ########################################################################################################### -->	
@@ -256,7 +260,6 @@
         </div>
     </div>
     <!-- End #experience --> 	
-	
 	
     <!-- OTHER EXPERIENCE SECTION ########################################################################################################### -->	
     <div id="experience" class="background-alt">
@@ -381,7 +384,6 @@
     </div>
     <!-- End #experience --> 
 		
-
     <!-- PROJECTS SECTION ########################################################################################################### -->	
     <div id="projects">
         <h2 class="heading">Projects</h2>
@@ -422,8 +424,7 @@
         </div>
     </div>
     <!-- End #projects -->
-	
-	
+
     <!-- CONTACT SECTION ############################################################################################################# -->	
     <div id="contact">
         <h2>Get in Touch</h2>
