--- a/index.html
+++ b/index.html
@@ -229,7 +229,7 @@
 	    <li>Adobe Lightroom</li>
         </ul>
     </div>
-    <div class="resume-skill-item">
+    <div id="w" class="resume-skill-item">
 	<ul>
 		<li> CRLA International Mentor Training Program Certification (IMPTC) – Certified Mentor Level I</li>
 		<li> Tau Beta Pi Engineering Honor Society</li>
@@ -238,7 +238,7 @@
 
     <!-- ENGINEERING EXPERIENCE SECTION ########################################################################################################### -->	
     <div id="experience" class="background-alt">
-        <h2 class="heading">Engineering Experience</h2>
+        <h2 class="heading">Professional Experience</h2>
         <div id="experience-timeline">
             <div data-date="September 2018 - May 2019">
                 <h3>CSUN Dept. of Electrical and Computer Engineering</h3>
