--- a/index.html
+++ b/index.html
@@ -229,7 +229,7 @@
 	    <li>Adobe Lightroom</li>
         </ul>
     </div>
-    <div id="w" class="resume-skill-item">
+    <div id="resume-skill-item" class="resume-skill-item">
 	<ul>
 		<li> CRLA International Mentor Training Program Certification (IMPTC) – Certified Mentor Level I</li>
 		<li> Tau Beta Pi Engineering Honor Society</li>
