--- a/index.html
+++ b/index.html
@@ -95,7 +95,7 @@
             <h4>Master of Science in Computer Engineering</h4>
 		<!--<span class="education-date">3.95/4.00-</span>-->
             <ul>
-	        <li> CGPA: 3.95/4.0</li>
+	        <li> Cumulative GPA: 3.95/4.0</li>
                 <li> Distinction Award</li>
 	    	<li> Outstanding Graduate Award</li>
             </ul>
@@ -107,7 +107,7 @@
             <h4>Bachelor of Science in Computer Engineering</h4>
 		<!--<span> <i class="education-date">3.94/4.00</i></span>-->
             <ul>
-	        <li> CGPA: 3.94/4.0</li>
+	        <li> Cumulative GPA: 3.94/4.0</li>
 		<li> Summa Cum Laude</li>
 		<li> Dean's List</li>
             </ul>
@@ -119,7 +119,7 @@
             <h4>Associate's Degree - Computer Engineering</h4>
 		<!--<span> <i class="education-date">3.97/4.00</i></span>-->
             <ul>
-	        <li> CGPA: 3.97/4.0</li>
+	        <li> Cumulative GPA: 3.97/4.0</li>
 		<li> Achievement & Merit Scholarships</li>
 	        <li> Dean's List</li>
             </ul>
@@ -230,9 +230,12 @@
         </ul>
     </div>
     <div id="resume-skill-item" class="certification">
-	<ul>
+	<ul>]
+		<li> Tau Beta Pi Engineering Honor Society, Class of 2017</li>
+		<li> Best Leadership Award, Tau Beta Pi Engineering Honor Society</li>
+		<li> Matador Volunteer Service Award 2019</li>
+		<li> President's Vounteer Service Award (PVSA) 2016, 2017, 2018</li>
 		<li> CRLA International Mentor Training Program Certification (IMPTC) – Certified Mentor Level I</li>
-		<li> Tau Beta Pi Engineering Honor Society</li>
     </div>
     <!-- End #skills -->
 
