--- a/index.html
+++ b/index.html
@@ -131,7 +131,7 @@
 	
     <!-- SKILLS SECTION ############################################################################################################# -->	
     <div id="skills-0">
-        <h2 class="heading">Skills & Certification</h2>
+        <h2 class="heading">Skills & Achievements</h2>
 	<div class="group">    
 	<section>	<!-- Left Section-->
 		<div class="resume-skill-item"> 
