--- a/index.html
+++ b/index.html
@@ -398,10 +398,29 @@
                     </div>
                     <!-- End .project-image -->
                     <div class="project-info">
-                        <h3>Project Name Here</h3>
-                        <p>
-                            Lorem ipsum dolor sit amet, consectetur adipiscing elit. Curabitur in iaculis ex. Etiam volutpat laoreet urna. Morbi ut tortor nec nulla commodo malesuada sit amet vel lacus. Fusce eget efficitur libero. Morbi dapibus porta quam laoreet placerat.
-                        </p>
+                        <h3>A Novel Approach for Efficient Implementation of Nucleus Detection and Segmentation Using Correlated Dual Color Space</h3>
+                        <ul>
+                            	<li> Researching an efficient yet accurate algorithm in blood cell segmentation in microscopic blood images using digital image processing techniques, to improve and accelerate the diagnosis of different hematologic disorder.</li>
+				<li> The research proposes a novel technique that involves the RGB and CMYK color spaces.</li>
+                        </ul>
+                        <!--<a href="#">View Project</a>-->
+                    </div>
+                    <!-- End .project-info -->
+                </div>
+                <!-- End .project -->
+
+                <div class="project shadow-large">
+                    <div class="project-image">
+                        <img src="images/project.jpg" />
+                    </div>
+                    <!-- End .project-image -->
+                    <div class="project-info">
+                        <h3>Blood Cells Detection using Circular Hough Transform in MATLAB</h3>
+                        <ul>
+                            	<li> White Blood Cells detection and calculation on color blood test images.</li>
+				<li> Morphological operation to process and filter image noise for further handling.</li>
+				<li> Translated concept for implementation on real-time detection on FPGA.</li>
+		        </ul>
                         <a href="#">View Project</a>
                     </div>
                     <!-- End .project-info -->
@@ -414,15 +433,53 @@
                     </div>
                     <!-- End .project-image -->
                     <div class="project-info">
-                        <h3>Project Name Here</h3>
-                        <p>
-                            Lorem ipsum dolor sit amet, consectetur adipiscing elit. Curabitur in iaculis ex. Etiam volutpat laoreet urna. Morbi ut tortor nec nulla commodo malesuada sit amet vel lacus. Fusce eget efficitur libero. Morbi dapibus porta quam laoreet placerat.
-                        </p>
-                        <a href="#">View Project</a>
+                        <h3>Multi-Clock and Timers using ZedBoard Development Board</h3>
+                        <ul>
+                            	<li> Implemented FSM on the FPGA for chess clocks and timers with error handlings.</li>
+				<li> Added Seven-segment displays for two user’s countdowns, with on-board LEDs.</li>
+				<li> Implemented LFSR for pseudo-random number generation for Fischer chess clock.</li>
+                        </ul>
+                        <!--<a href="#">View Project</a>-->
                     </div>
                     <!-- End .project-info -->
                 </div>
                 <!-- End .project -->
+		    
+                <div class="project shadow-large">
+                    <div class="project-image">
+                        <img src="images/project.jpg" />
+                    </div>
+                    <!-- End .project-image -->
+                    <div class="project-info">
+                        <h3>Audio Codec using ZedBoard SoC Development Board</h3>
+                        <ul>
+                            	<li> Integrated PL and PS of the board to implement functionality for audio streaming.</li>
+				<li> Added frequency filtering and tones to the audio streaming output.</li>
+				<li> Implemented onboard display and switches for better user experience and control.</li>
+                        </ul>
+                        <!--<a href="#">View Project</a>-->
+                    </div>
+                    <!-- End .project-info -->
+                </div>
+                <!-- End .project -->		  
+		    
+                <div class="project shadow-large">
+                    <div class="project-image">
+                        <img src="images/project.jpg" />
+                    </div>
+                    <!-- End .project-image -->
+                    <div class="project-info">
+                        <h3>32 Bit Binary Floating-Point Adder Using IEEE 754 Single Precision Format</h3>
+                        <ul>
+                            	<li> Implemented floating point adder in VHDL according to IEEE 754 standard.</li>
+				<li> The adder accepts and normalizes two numbers, and using two’s complement adder to add or subtract the pre-normalized significands.</li>
+				<li> The design is simulated and tested using Xilinx Vivado software.</li>
+                        </ul>
+                        <!--<a href="#">View Project</a>-->
+                    </div>
+                    <!-- End .project-info -->
+                </div>
+                <!-- End .project -->			    
             </div>
         </div>
     </div>
