--- a/index.html
+++ b/index.html
@@ -465,7 +465,7 @@
 		    
                 <div class="project shadow-large">
                     <div class="project-image">
-                        <img src="images/project.jpg" />
+                        <img src="images/Floating_Point_Adder.png"/>
                     </div>
                     <!-- End .project-image -->
                     <div class="project-info">
