--- a/index.html
+++ b/index.html
@@ -399,10 +399,10 @@
                     <!-- End .project-image -->
                     <div class="project-info">
                         <h3>A Novel Approach for Efficient Implementation of Nucleus Detection and Segmentation Using Correlated Dual Color Space</h3>
-                        <ul>
-                            	<li> Researching an efficient yet accurate algorithm in blood cell segmentation in microscopic blood images using digital image processing techniques, to improve and accelerate the diagnosis of different hematologic disorder.</li>
-				<li> The research proposes a novel technique that involves the RGB and CMYK color spaces.</li>
-                        </ul>
+                        <p>
+                            	Researching an efficient yet accurate algorithm in blood cell segmentation in microscopic blood images using digital image processing techniques, to improve and accelerate the diagnosis of different hematologic disorder.
+				The research proposes a novel technique that involves the RGB and CMYK color spaces.
+                        <p>
                         <!--<a href="#">View Project</a>-->
                     </div>
                     <!-- End .project-info -->
