--- a/index.html
+++ b/index.html
@@ -465,7 +465,7 @@
 		    
                 <div class="project shadow-large">
                     <div class="project-image">
-                        <img src="images/Screen Shot 2019-06-11 at 4.09.35 PM.png"/>
+                        <img src="images/FP3.jpg"/>
                     </div>
                     <!-- End .project-image -->
                     <div class="project-info">
