--- a/index.html
+++ b/index.html
@@ -400,9 +400,9 @@
                     <div class="project-info">
                         <h3>A Novel Approach for Efficient Implementation of Nucleus Detection and Segmentation Using Correlated Dual Color Space</h3>
                         <p>
-                            	Researching an efficient yet accurate algorithm in blood cell segmentation in microscopic blood images using digital image processing techniques, to improve and accelerate the diagnosis of different hematologic disorder.
-				The research proposes a novel technique that involves the RGB and CMYK color spaces.
-                        <p>
+                            	● Researching an efficient yet accurate algorithm in blood cell segmentation in microscopic blood images using digital image processing techniques, to improve and accelerate the diagnosis of different hematologic disorder.<br>
+				● The research proposes a novel technique that involves the RGB and CMYK color spaces.
+                        </p>
                         <!--<a href="#">View Project</a>-->
                     </div>
                     <!-- End .project-info -->
@@ -416,11 +416,11 @@
                     <!-- End .project-image -->
                     <div class="project-info">
                         <h3>Blood Cells Detection using Circular Hough Transform in MATLAB</h3>
-                        <ul>
-                            	<li> White Blood Cells detection and calculation on color blood test images.</li>
-				<li> Morphological operation to process and filter image noise for further handling.</li>
-				<li> Translated concept for implementation on real-time detection on FPGA.</li>
-		        </ul>
+                        <p>
+                            	● White Blood Cells detection and calculation on color blood test images.<br>
+				● Morphological operation to process and filter image noise for further handling.<br>
+				● Translated concept for implementation on real-time detection on FPGA.<br>
+                        </p>
                         <a href="#">View Project</a>
                     </div>
                     <!-- End .project-info -->
@@ -434,11 +434,11 @@
                     <!-- End .project-image -->
                     <div class="project-info">
                         <h3>Multi-Clock and Timers using ZedBoard Development Board</h3>
-                        <ul>
-                            	<li> Implemented FSM on the FPGA for chess clocks and timers with error handlings.</li>
-				<li> Added Seven-segment displays for two user’s countdowns, with on-board LEDs.</li>
-				<li> Implemented LFSR for pseudo-random number generation for Fischer chess clock.</li>
-                        </ul>
+                        <p>
+                            	● Implemented FSM on the FPGA for chess clocks and timers with error handlings.<br>
+				● Added Seven-segment displays for two user’s countdowns, with on-board LEDs.<br>
+				● Implemented LFSR for pseudo-random number generation for Fischer chess clock.<br>
+                        </p>
                         <!--<a href="#">View Project</a>-->
                     </div>
                     <!-- End .project-info -->
@@ -452,11 +452,11 @@
                     <!-- End .project-image -->
                     <div class="project-info">
                         <h3>Audio Codec using ZedBoard SoC Development Board</h3>
-                        <ul>
-                            	<li> Integrated PL and PS of the board to implement functionality for audio streaming.</li>
-				<li> Added frequency filtering and tones to the audio streaming output.</li>
-				<li> Implemented onboard display and switches for better user experience and control.</li>
-                        </ul>
+                        <p>
+                            	● Integrated PL and PS of the board to implement functionality for audio streaming.<br>
+				● Added frequency filtering and tones to the audio streaming output.<br>
+				● Implemented onboard display and switches for better user experience and control.<br>
+                        </p>
                         <!--<a href="#">View Project</a>-->
                     </div>
                     <!-- End .project-info -->
@@ -470,11 +470,11 @@
                     <!-- End .project-image -->
                     <div class="project-info">
                         <h3>32 Bit Binary Floating-Point Adder Using IEEE 754 Single Precision Format</h3>
-                        <ul>
-                            	<li> Implemented floating point adder in VHDL according to IEEE 754 standard.</li>
-				<li> The adder accepts and normalizes two numbers, and using two’s complement adder to add or subtract the pre-normalized significands.</li>
-				<li> The design is simulated and tested using Xilinx Vivado software.</li>
-                        </ul>
+                        <p>
+                            	• Implemented floating point adder in VHDL according to IEEE 754 standard.<br>
+				• The adder accepts and normalizes two numbers, and using two’s complement adder to add or subtract the pre-normalized significands.<br>
+				• The design is simulated and tested using Xilinx Vivado software.<br>
+                        </p>
                         <!--<a href="#">View Project</a>-->
                     </div>
                     <!-- End .project-info -->
