--- a/index.html
+++ b/index.html
@@ -400,7 +400,7 @@
                     <div class="project-info">
                         <h3>A Novel Approach for Efficient Implementation of Nucleus Detection and Segmentation Using Correlated Dual Color Space</h3>
                         <p>
-                            	● Researching an efficient yet accurate algorithm in blood cell segmentation in microscopic blood images using digital image processing techniques, to improve and accelerate the diagnosis of different hematologic disorder.<br>
+                            	● Researching an efficient yet accurate algorithm in blood cell segmentation in microscopic blood images using digital image processing techniques, to improve and accelerate the diagnosis of different hematologic disorder.<br><br>
 				● The research proposes a novel technique that involves the RGB and CMYK color spaces.
                         </p>
                         <!--<a href="#">View Project</a>-->
@@ -417,9 +417,9 @@
                     <div class="project-info">
                         <h3>Blood Cells Detection using Circular Hough Transform in MATLAB</h3>
                         <p>
-                            	● White Blood Cells detection and calculation on color blood test images.<br>
-				● Morphological operation to process and filter image noise for further handling.<br>
-				● Translated concept for implementation on real-time detection on FPGA.<br>
+                            	● White Blood Cells detection and calculation on color blood test images.<br><br>
+				● Morphological operation to process and filter image noise for further handling.<br><br>
+				● Translated concept for implementation on real-time detection on FPGA.
                         </p>
                         <a href="#">View Project</a>
                     </div>
@@ -435,9 +435,9 @@
                     <div class="project-info">
                         <h3>Multi-Clock and Timers using ZedBoard Development Board</h3>
                         <p>
-                            	● Implemented FSM on the FPGA for chess clocks and timers with error handlings.<br>
-				● Added Seven-segment displays for two user’s countdowns, with on-board LEDs.<br>
-				● Implemented LFSR for pseudo-random number generation for Fischer chess clock.<br>
+                            	● Implemented FSM on the FPGA for chess clocks and timers with error handlings.<br><br>
+				● Added Seven-segment displays for two user’s countdowns, with on-board LEDs.<br><br>
+				● Implemented LFSR for pseudo-random number generation for Fischer chess clock.
                         </p>
                         <!--<a href="#">View Project</a>-->
                     </div>
@@ -453,9 +453,9 @@
                     <div class="project-info">
                         <h3>Audio Codec using ZedBoard SoC Development Board</h3>
                         <p>
-                            	● Integrated PL and PS of the board to implement functionality for audio streaming.<br>
-				● Added frequency filtering and tones to the audio streaming output.<br>
-				● Implemented onboard display and switches for better user experience and control.<br>
+                            	● Integrated PL and PS of the board to implement functionality for audio streaming.<br><br>
+				● Added frequency filtering and tones to the audio streaming output.<br><br>
+				● Implemented onboard display and switches for better user experience and control.
                         </p>
                         <!--<a href="#">View Project</a>-->
                     </div>
@@ -471,9 +471,9 @@
                     <div class="project-info">
                         <h3>32 Bit Binary Floating-Point Adder Using IEEE 754 Single Precision Format</h3>
                         <p>
-                            	• Implemented floating point adder in VHDL according to IEEE 754 standard.<br>
-				• The adder accepts and normalizes two numbers, and using two’s complement adder to add or subtract the pre-normalized significands.<br>
-				• The design is simulated and tested using Xilinx Vivado software.<br>
+                            	• Implemented floating point adder in VHDL according to IEEE 754 standard.<br><br>
+				• The adder accepts and normalizes two numbers, and using two’s complement adder to add or subtract the pre-normalized significands.<br><br>
+				• The design is simulated and tested using Xilinx Vivado software.
                         </p>
                         <!--<a href="#">View Project</a>-->
                     </div>
