--- a/index.html
+++ b/index.html
@@ -230,8 +230,9 @@
         </ul>
     </div>
     <div id="resume-skill-item" class="certification">
+	    <i class="fa fa-check-circle-o" aria-hidden="true"></i>
 	<ul>
-		<li> Tau Beta Pi Engineering Honor Society, Class of 2017</li>
+		<i class="fa fa-check-circle-o" aria-hidden="true"></i> <li> Tau Beta Pi Engineering Honor Society, Class of 2017</li>
 		<li> Best Leadership Award, Tau Beta Pi Engineering Honor Society</li>
 		<li> Matador Volunteer Service Award 2019</li>
 		<li> President's Vounteer Service Award (PVSA) 2016, 2017, 2018</li>
