--- a/index.html
+++ b/index.html
@@ -230,13 +230,15 @@
         </ul>
     </div>
     <div id="resume-skill-item" class="certification">
-	    <i class="fa fa-check-circle-o" aria-hidden="true"></i>
 	<ul>
-		<i class="fa fa-check-circle-o" aria-hidden="true"></i> <li> Tau Beta Pi Engineering Honor Society, Class of 2017</li>
-		<li> Best Leadership Award, Tau Beta Pi Engineering Honor Society</li>
-		<li> Matador Volunteer Service Award 2019</li>
-		<li> President's Vounteer Service Award (PVSA) 2016, 2017, 2018</li>
-		<li> CRLA International Mentor Training Program Certification (IMPTC) – Certified Mentor Level I</li>
+    		<link href="https://use.fontawesome.com/releases/v5.0.7/css/all.css" rel="stylesheet">
+		<i class="fas fa-bookmark"></i> &nbsp; &nbsp; Tau Beta Pi Engineering Honor Society, Class of 2017<br>
+		<i class="fas fa-bookmark"></i> &nbsp; &nbsp;  Best Leadership Award, Tau Beta Pi Engineering Honor Society<br>
+		<i class="fas fa-bookmark"></i> &nbsp; &nbsp;  Matador Volunteer Service Award 2019<br>
+		<i class="fas fa-bookmark"></i> &nbsp; &nbsp;  President's Vounteer Service Award (PVSA) 2016, 2017, 2018<br>
+		<i class="fas fa-bookmark"></i> &nbsp; &nbsp;  CRLA International Mentor Training Program Certification (IMPTC) – Certified Mentor Level I<br>
+    </ul>
+    </div>
     </div>
     <!-- End #skills -->
 
