--- a/index.html
+++ b/index.html
@@ -231,11 +231,11 @@
     </div>
     <div id="resume-skill-item" class="certification">
 	<ul>
-		<i class="fas fa-bookmark"></i> &nbsp; &nbsp; Tau Beta Pi Engineering Honor Society, Class of 2017<br>
-		<i class="fas fa-bookmark"></i> &nbsp; &nbsp;  Best Leadership Award, Tau Beta Pi Engineering Honor Society<br>
-		<i class="fas fa-bookmark"></i> &nbsp; &nbsp;  Matador Volunteer Service Award 2019<br>
-		<i class="fas fa-bookmark"></i> &nbsp; &nbsp;  President's Vounteer Service Award (PVSA) 2016, 2017, 2018<br>
-		<i class="fas fa-bookmark"></i> &nbsp; &nbsp;  CRLA International Mentor Training Program Certification (IMPTC) – Certified Mentor Level I<br>
+		<i class="fa fa-bookmark"></i> &nbsp; &nbsp; Tau Beta Pi Engineering Honor Society, Class of 2017<br>
+		<i class="fa fa-bookmark"></i> &nbsp; &nbsp;  Best Leadership Award, Tau Beta Pi Engineering Honor Society<br>
+		<i class="fa fa-bookmark"></i> &nbsp; &nbsp;  Matador Volunteer Service Award 2019<br>
+		<i class="fa fa-bookmark"></i> &nbsp; &nbsp;  President's Vounteer Service Award (PVSA) 2016, 2017, 2018<br>
+		<i class="fa fa-bookmark"></i> &nbsp; &nbsp;  CRLA International Mentor Training Program Certification (IMPTC) – Certified Mentor Level I<br>
     </ul>
     </div>
     </div>
