--- a/index.html
+++ b/index.html
@@ -396,7 +396,7 @@
             <div class="row">
                 <div class="project shadow-large">
                     <div class="project-image">
-                        <img src="images/EE.jpg" />
+                        <img src="images/AR.jpg" />
                     </div>
                     <!-- End .project-image -->
                     <div class="project-info">
@@ -413,7 +413,7 @@
 
                 <div class="project shadow-large">
                     <div class="project-image">
-                        <img src="images/EE.jpg" />
+                        <img src="images/Programming-Laptop.jpg" />
                     </div>
                     <!-- End .project-image -->
                     <div class="project-info">
@@ -431,7 +431,7 @@
 
                 <div class="project shadow-large">
                     <div class="project-image">
-                        <img src="images/EE.jpg" />
+                        <img src="images/AR.jpg" />
                     </div>
                     <!-- End .project-image -->
                     <div class="project-info">
@@ -449,7 +449,7 @@
 		    
                 <div class="project shadow-large">
                     <div class="project-image">
-                        <img src="images/EE.jpg" />
+                        <img src="images/Programming-Laptop.jpg" />
                     </div>
                     <!-- End .project-image -->
                     <div class="project-info">
@@ -467,7 +467,7 @@
 		    
                 <div class="project shadow-large">
                     <div class="project-image">
-                        <img src="images/EE.jpg"/>
+                        <img src="images/AR.jpg"/>
                     </div>
                     <!-- End .project-image -->
                     <div class="project-info">
