--- a/index.html
+++ b/index.html
@@ -431,7 +431,7 @@
 
                 <div class="project shadow-large">
                     <div class="project-image">
-                        <img src="images/AR.jpg" />
+                        <img src="images/Zb.jpg" />
                     </div>
                     <!-- End .project-image -->
                     <div class="project-info">
@@ -467,7 +467,7 @@
 		    
                 <div class="project shadow-large">
                     <div class="project-image">
-                        <img src="images/AR.jpg"/>
+                        <img src="images/ieee.jpg"/>
                     </div>
                     <!-- End .project-image -->
                     <div class="project-info">
