--- a/index.html
+++ b/index.html
@@ -449,7 +449,7 @@
 		    
                 <div class="project shadow-large">
                     <div class="project-image">
-                        <img src="images/Programming-Laptop.jpg" />
+                        <img src="images/audio.jpg" />
                     </div>
                     <!-- End .project-image -->
                     <div class="project-info">
