--- a/index.html
+++ b/index.html
@@ -51,9 +51,9 @@
         <div id="lead-content">
             <h1>Yin Fung Khong</h1>
             <h2>M.S./B.S. in Computer Engineering</h2>
-            <a href="YinFungKhong_MS-CompEngr_June7_CV.pdf" download class="btn-rounded-white">Download CV</a>
-		&nbsp;
-            <a href="YinFungKhong_MS-CompEngr_June9_ResumeEngr.pdf" download class="btn-rounded-white">Download Resume</a>
+            <a href="YinFungKhong_MS-CompEngr_June7_CV.pdf" class="btn-rounded-white">View CV</a>
+		&nbsp; &nbsp;
+            <a href="YinFungKhong_MS-CompEngr_June11_ResumeEngr.pdf" class="btn-rounded-white">View Resume</a>
         </div>
         <!-- End #lead-content -->
 
