--- a/index.html
+++ b/index.html
@@ -29,16 +29,19 @@
                 <a href="#about">About</a>
             </li>
             <li>
-                <a href="#experience">Experience</a>
-            </li>
-            <li>
                 <a href="#education">Education</a>
             </li>
             <li>
+                <a href="#skills">Skills&Achievements</a>
+            </li>
+            <li>
+                <a href="#experience">Professional Experience</a>
+            </li>
+		<li>
                 <a href="#projects">Projects</a>
             </li>
             <li>
-                <a href="#skills">Skills</a>
+                <a href="#experience">Leadership & Involvement</a>
             </li>
             <!--<li>
                 <a href="#contact">Contact</a>
@@ -77,9 +80,7 @@
                 </div>
                 <div class="col-md-8">
                     <p>
-                        Lorem ipsum dolor sit amet, consectetur adipiscing elit. Curabitur in iaculis ex. Etiam volutpat laoreet urna. Morbi ut tortor nec nulla commodo malesuada sit amet vel lacus. Fusce eget efficitur libero. Morbi dapibus porta quam laoreet placerat. Donec
-                        eu vehicula neque. Donec viverra lorem nunc, tempus euismod eros sollicitudin ut. Quisque et tincidunt libero. Donec id pharetra justo. Proin euismod lacinia dolor, eu scelerisque justo tempus pharetra. Vivamus nunc justo, finibus
-                        ut nisl sed, euismod rhoncus nulla. Proin sed magna egestas, egestas ante et, congue eros. In consequat, mauris dapibus tincidunt suscipit, ex libero aliquet diam, at maximus risus enim non leo.
+                        Highly motivated, passionate and ambitious young professional demonstrated success and dedication in academics and leadership. Detail-oriented, attentive and dependable, completed every assigned tasks and responsibilities in a timely manner with genuine commitment to quality and satisfaction with great engineering ethics and disciplines. Proactive leader and team player in organizations and extracurricular activities, integral to success of numerous projects and improvement initiatives in student affairs, both university and college level.
                     </p>
                 </div>
             </div>
