--- a/index.html
+++ b/index.html
@@ -79,7 +79,7 @@
                     <h2 class="heading">About Me</h2>
                 </div>
 		<div class="pp">
-                        <img src="images/DSC_0199-3.jpg"/>
+                        <img class="pp2" src="images/DSC_0199-3.jpg"/>
 	    	</div>
                 <div class="col-md-8">
                     <p>
