--- a/index.html
+++ b/index.html
@@ -304,7 +304,7 @@
 				● Morphological operation to process and filter image noise for further handling.<br><br>
 				● Translated concept for implementation on real-time detection on FPGA.
                         </p>
-                        <a href="#">View Project</a>
+                        <!--<a href="#">View Project</a>-->
                     </div>
                     <!-- End .project-info -->
                 </div>
