--- a/index.html
+++ b/index.html
@@ -283,8 +283,9 @@
                     <div class="project-info">
                         <h3>A Novel Approach for Efficient Implementation of Nucleus Detection and Segmentation Using Correlated Dual Color Space</h3>
                         <p>
-                            	● Researching an efficient yet accurate algorithm in blood cell segmentation in microscopic blood images using digital image processing techniques, to improve and accelerate the diagnosis of different hematologic disorder.<br><br>
-				● The research proposes a novel technique that involves the RGB and CMYK color spaces.
+                            	● Researches an efficient algorithm for blood cell segmentation in microscopic blood images using digital image processing techniques, to improve and accelerate the diagnosis of different hematologic disorders.<br><br>
+				● Proposes a novel technique that exploits the correlation between the RGB and CMYK color spaces, and yields segmented nuclei that are virtually congruent to the nuclei in the initial image. 
+
                         </p>
                         <!--<a href="#">View Project</a>-->
                     </div>
@@ -354,9 +355,9 @@
                     <div class="project-info">
                         <h3>32 Bit Binary Floating-Point Adder Using IEEE 754 Single Precision Format</h3>
                         <p>
-                            	• Implemented floating point adder in VHDL according to IEEE 754 standard.<br><br>
-				• The adder accepts and normalizes two numbers, and using two’s complement adder to add or subtract the pre-normalized significands.<br><br>
-				• The design is simulated and tested using Xilinx Vivado software.
+                            	● Implemented floating point adder in VHDL according to IEEE 754 standard.<br><br>
+				● The adder accepts and normalizes two numbers, and using two’s complement adder to add or subtract the pre-normalized significands.<br><br>
+				● The design is simulated and tested using Xilinx Vivado software.
                         </p>
                         <!--<a href="#">View Project</a>-->
                     </div>
