--- a/index.html
+++ b/index.html
@@ -513,7 +513,8 @@
         <div class="container">
             <div class="row">
                 <div class="col-sm-5 copyright">
-			<p>Copyright &copy 2019 Yin Fung Khong</p>
+			<p>Copyright &copy 2019 Yin Fung Khong<br>
+				Contact me: yinfung96@gmail.com</p>
                 </div>
                 <div class="col-sm-2 top">
                     <span id="to-top">
