--- a/index.html
+++ b/index.html
@@ -514,7 +514,8 @@
             <div class="row">
                 <div class="col-sm-5 copyright">
 			<p>Copyright &copy 2019 Yin Fung Khong<br>
-				Contact me: yinfung96@gmail.com</p>
+				Contact me: yinfung96@gmail.com<br>
+				Ring Me: 206-434-2327</p>
                 </div>
                 <div class="col-sm-2 top">
                     <span id="to-top">
