--- a/index.html
+++ b/index.html
@@ -513,10 +513,12 @@
         <div class="container">
             <div class="row">
                 <div class="col-sm-5 copyright">
+			<style = color: #74808a;font-size: 0.9em>
 			<p>Copyright &copy 2019 Yin Fung Khong<br>
 				Contact me: yinfung96@gmail.com<br>
 				Ring Me: 206-434-2327</p>
                 </div>
+		
                 <div class="col-sm-2 top">
                     <span id="to-top">
                         <i class="fa fa-chevron-up" aria-hidden="true"></i>
