--- a/index.html
+++ b/index.html
@@ -514,9 +514,9 @@
             <div class="row">
                 <div class="col-sm-5 copyright">
 			<style = color: #74808a;font-size: 0.9em>
-			<p>Copyright &copy 2019 Yin Fung Khong<br>
+				<p style={color: #74808a;font-size: 0.9em;}Copyright &copy 2019 Yin Fung Khong<br>
 				Contact me: yinfung96@gmail.com<br>
-				Ring Me: 206-434-2327</p>
+				Ring Me: 206-434-2327></p>
                 </div>
 		
                 <div class="col-sm-2 top">
