--- a/index.html
+++ b/index.html
@@ -532,7 +532,7 @@
                             <a href="https://www.linkedin.com/in/yinfungkhong/" target="_blank"><i class="fa fa-linkedin" aria-hidden="true"></i></a>
                         </li>
 			<li>
-			    <a href="yinfungphotography.me" target="_blank"><i class="fa fa-camera" aria-hidden="true"></i>
+			    <a href="https://yinfungphotography.me" target="_blank"><i class="fa fa-camera" aria-hidden="true"></i>
 		        </li>
                         
                         
