--- a/index.html
+++ b/index.html
@@ -363,7 +363,26 @@
                     </div>
                     <!-- End .project-info -->
                 </div>
+                <!-- End .project -->	
+		    
+                <div class="project shadow-large">
+                    <div class="project-image">
+                        <img src="images/ieee300.jpg"/>
+                    </div>
+                    <!-- End .project-image -->
+                    <div class="project-info">
+                        <h3>Personal Photography Website</h3>
+                        <p>
+                            	● Installed and utilized Wordpress online tool for easier webpage creation and mangement. 
+				● Self-taught HTML/PHP/CSS/JS to modify the template and edit the content based on personal needs.
+				● Serves as a platform to showcase artworks driven by personal hobby and interest.
+                        </p>
+                        <a href="yinfungphotography.me">View Project</a>
+                    </div>
+                    <!-- End .project-info -->
+                </div>
                 <!-- End .project -->			    
+
             </div>
         </div>
     </div>
