--- a/index.html
+++ b/index.html
@@ -367,7 +367,7 @@
 		    
                 <div class="project shadow-large">
                     <div class="project-image">
-                        <img src="images/website.jpg"/>
+                        <img src="images/website.png"/>
                     </div>
                     <!-- End .project-image -->
                     <div class="project-info">
