--- a/index.html
+++ b/index.html
@@ -295,6 +295,42 @@
 
                 <div class="project shadow-large">
                     <div class="project-image">
+                        <img src="images/DV.png" />
+                    </div>
+                    <!-- End .project-image -->
+                    <div class="project-info">
+                        <h3>Distance Vector Routing in a Remote Messenger App using Python</h3>
+                        <p>
+                            	● Implemented a simplified messenger in Visual Studio IDE utilizing Distance Vector Routing Protocol using TCP/IP protocol to determine the best route between nodes in the network. 
+				● Predefined network topology is loaded into the program upon startup, and server commands may be called to manipulate the topology, including updating the link cost between two nodes and disabling certain nodes.
+
+                        </p>
+                        <!--<a href="#">View Project</a>-->
+                    </div>
+                    <!-- End .project-info -->
+                </div>
+                <!-- End .project -->
+		   
+		<div class="project shadow-large">
+                    <div class="project-image">
+                        <img src="images/tcpipprotocols.png" />
+                    </div>
+                    <!-- End .project-image -->
+                    <div class="project-info">
+                        <h3>A Chat Application for Remote Message Exchange in C Language</h3>
+                        <p>
+                            	● Developed a two-in-one server-client chat application utilizing TCP/IP protocol in C language in Eclipse and UNIX shell that is able to handle multiple socket connections at any runtime.
+				● Extended program functionality with user commands, and handled possible system and user errors in the program.
+
+                        </p>
+                        <!--<a href="#">View Project</a>-->
+                    </div>
+                    <!-- End .project-info -->
+                </div>
+                <!-- End .project -->    
+		    
+	    	<div class="project shadow-large">
+                    <div class="project-image">
                         <img src="images/Programming-Laptop.jpg" />
                     </div>
                     <!-- End .project-image -->
