--- a/index.html
+++ b/index.html
@@ -413,7 +413,7 @@
 				● Self-taught HTML/PHP/CSS/JS to modify the template and edit the content based on personal needs.<br><br>
 				● Serves as a platform to showcase artworks driven by personal hobby and interest.
                         </p>
-                        <a href="https://yinfungphotography.me">View Project</a>
+                        <a href="https://yinfungphotography.me" target="_blank">View Project</a>
                     </div>
                     <!-- End .project-info -->
                 </div>
