--- a/index.html
+++ b/index.html
@@ -283,7 +283,7 @@
                     <div class="project-info">
                         <h3>A Novel Approach for Efficient Implementation of Nucleus Detection and Segmentation Using Correlated Dual Color Space</h3>
                         <p>
-                            	● Researches an efficient algorithm for blood cell segmentation in microscopic blood images using digital image processing techniques, to improve and accelerate the diagnosis of different hematologic disorders.<br>
+                            	● Researches an efficient algorithm for blood cell segmentation in microscopic blood images using digital image processing techniques, to improve and accelerate the diagnosis of different hematologic disorders.<br><br>
 				● Proposes a novel technique that exploits the correlation between the RGB and CMYK color spaces, and yields segmented nuclei that are virtually congruent to the nuclei in the initial image. 
 
                         </p>
@@ -301,7 +301,7 @@
                     <div class="project-info">
                         <h3>Distance Vector Routing in a Remote Messenger App using Python</h3>
                         <p>
-                            	● Implemented a simplified messenger in Visual Studio IDE utilizing Distance Vector Routing Protocol using TCP/IP protocol to determine the best route between nodes in the network.<br>
+                            	● Implemented a simplified messenger in Visual Studio IDE utilizing Distance Vector Routing Protocol using TCP/IP protocol to determine the best route between nodes in the network.<br><br>
 				● Predefined network topology is loaded into the program upon startup, and server commands may be called to manipulate the topology, including updating the link cost between two nodes and disabling certain nodes.
 
                         </p>
